--- a/zetanetwork-web/index.html
+++ b/zetanetwork-web/index.html
@@ -1,114 +1,45 @@
-<!-- index.html — Zeta Network Frontend -->
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Zeta Network</title>
     <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            max-width: 800px; margin: 2rem auto; padding: 0 1rem;
-            background: #0a0a0a; color: #e0e0e0;
-        }
-        h1 { color: #00d4ff; margin-bottom: 0.5rem; }
-        #status { color: #888; margin: 0.5rem 0; font-size: 0.9rem; }
-        #status.connected { color: #4caf50; }
-        #status.error { color: #f44336; }
-        #nodes { color: #888; font-size: 0.85rem; margin-bottom: 1rem; }
-        #feed {
-            border: 1px solid #333; border-radius: 8px;
-            padding: 1rem; height: 400px; overflow-y: auto;
-            margin: 1rem 0; background: #111;
-        }
-        #feed .msg {
-            padding: 0.4rem 0; border-bottom: 1px solid #1a1a1a;
-            word-wrap: break-word; font-size: 0.95rem;
-        }
-        .input-row { display: flex; gap: 0.5rem; }
-        #msg {
-            flex: 1; padding: 0.7rem; border: 1px solid #333;
-            border-radius: 6px; background: #111; color: #e0e0e0;
-            font-size: 1rem; outline: none;
-        }
-        #msg:focus { border-color: #00d4ff; }
-        button {
-            padding: 0.7rem 1.5rem; border: none; border-radius: 6px;
-            background: #00d4ff; color: #000; font-weight: bold;
-            cursor: pointer; font-size: 1rem;
-        }
-        button:hover { background: #00b8d9; }
+        *{box-sizing:border-box;margin:0;padding:0}
+        body{font-family:system-ui;max-width:700px;margin:2rem auto;padding:0 1rem;background:#0a0a0a;color:#ddd}
+        h1{color:#00d4ff;margin-bottom:.3rem}
+        #s{color:#888;font-size:.85rem;margin:.3rem 0}
+        #s.ok{color:#4caf50}#s.err{color:#f44336}
+        #f{border:1px solid #222;border-radius:8px;padding:1rem;height:60vh;overflow-y:auto;margin:1rem 0;background:#111}
+        #f div{padding:.3rem 0;border-bottom:1px solid #1a1a1a;word-wrap:break-word}
+        .r{display:flex;gap:.5rem}
+        input{flex:1;padding:.6rem;border:1px solid #333;border-radius:6px;background:#111;color:#ddd;font-size:1rem;outline:0}
+        input:focus{border-color:#00d4ff}
+        button{padding:.6rem 1.2rem;border:0;border-radius:6px;background:#00d4ff;color:#000;font-weight:700;cursor:pointer}
     </style>
 </head>
 <body>
     <h1>⚡ Zeta Network</h1>
-    <div id="status">Connexion au réseau...</div>
-    <div id="nodes">Relais: 1</div>
-    <div id="feed"></div>
-    <div class="input-row">
-        <input id="msg" placeholder="Votre message..." autofocus>
+    <div id="s">Connexion...</div>
+    <div id="f"></div>
+    <div class="r">
+        <input id="m" placeholder="Message..." autofocus>
         <button onclick="send()">Envoyer</button>
     </div>
-
-    <script>
-        const RELAY = '65.75.201.11';
-        const WS_PORT = 9091;
-        const statusEl = document.getElementById('status');
-        const feedEl = document.getElementById('feed');
-        const msgEl = document.getElementById('msg');
-        let ws;
-
-        function connect() {
-            // Connexion directe au WebSocket du nœud
-            // Si servi depuis le même serveur, utilise le proxy nginx /ws
-            let wsUrl;
-            if (location.hostname === RELAY || location.hostname === 'zetanetwork.org' || location.hostname === 'www.zetanetwork.org') {
-                const proto = location.protocol === 'https:' ? 'wss:' : 'ws:';
-                wsUrl = `${proto}//${location.host}/ws`;
-            } else {
-                wsUrl = `ws://${RELAY}:${WS_PORT}`;
-            }
-            ws = new WebSocket(wsUrl);
-
-            ws.onopen = () => {
-                statusEl.textContent = '✅ Connecté au réseau Zeta';
-                statusEl.className = 'connected';
-            };
-
-            ws.onmessage = (evt) => {
-                const div = document.createElement('div');
-                div.className = 'msg';
-                div.textContent = evt.data;
-                feedEl.appendChild(div);
-                feedEl.scrollTop = feedEl.scrollHeight;
-            };
-
-            ws.onclose = () => {
-                statusEl.textContent = '⚠️ Déconnecté — reconnexion dans 3s...';
-                statusEl.className = 'error';
-                setTimeout(connect, 3000);
-            };
-
-            ws.onerror = () => {
-                statusEl.textContent = '❌ Erreur de connexion';
-                statusEl.className = 'error';
-            };
-        }
-
-        function send() {
-            const text = msgEl.value.trim();
-            if (text && ws && ws.readyState === WebSocket.OPEN) {
-                ws.send(text);
-                msgEl.value = '';
-            }
-        }
-
-        // Envoyer avec Entrée
-        msgEl.addEventListener('keydown', (e) => {
-            if (e.key === 'Enter') send();
-        });
-
-        connect();
-    </script>
+<script>
+const s=document.getElementById('s'),f=document.getElementById('f'),m=document.getElementById('m');
+let ws;
+function connect(){
+    const proto=location.protocol==='https:'?'wss:':'ws:';
+    ws=new WebSocket(proto+'//'+location.host+'/ws');
+    ws.onopen=()=>{s.textContent='✅ Connecté';s.className='ok'};
+    ws.onmessage=e=>{const d=document.createElement('div');d.textContent=e.data;f.appendChild(d);f.scrollTop=f.scrollHeight};
+    ws.onclose=()=>{s.textContent='⏳ Reconnexion...';s.className='err';setTimeout(connect,2000)};
+    ws.onerror=()=>{s.className='err'};
+}
+function send(){const t=m.value.trim();if(t&&ws?.readyState===1){ws.send(t);m.value=''}}
+m.onkeydown=e=>{if(e.key==='Enter')send()};
+connect();
+</script>
 </body>
 </html>
